@@ -106,7 +106,7 @@ public class Subtokenize {
 
                     // Switch container exit w/ line endings.
                     var parameters = ListUtils.slice(events, lineIndex, index);
-                    parameters.add(0, event);
+                    parameters.addFirst(event);
                     ListUtils.splice(events, lineIndex, index - lineIndex + 1, parameters);
                     // System.out.printf("Evt %d: Splicing @ %d, remove=%d, add=%s\n", index, lineIndex, index -
                     // lineIndex + 1, parameters);
@@ -224,7 +224,7 @@ public class Subtokenize {
             current.previous = null;
             Assert.check(current.next == null, "expected no next token");
         } else {
-            breaks.remove(breaks.size() - 1);
+            breaks.removeLast();
         }
 
         // Now splice the events from the subtokenizer into the current events,
@@ -239,9 +239,9 @@ public class Subtokenize {
                 slice = ListUtils.slice(childEvents, breaks.get(index));
             }
 
-            var start = startPositions.remove(startPositions.size() - 1);
+            var start = startPositions.removeLast();
             Assert.check(start != null, "expected a start position when splicing");
-            jumps.add(0, new Jump(start, start + slice.size() - 1));
+            jumps.addFirst(new Jump(start, start + slice.size() - 1));
             ListUtils.splice(events, start, 2, slice);
             // System.out.printf("Evt %d: Splicing @ %d, remove=%d, add=%s\n", eventIndex, start, 2, slice);
         }
